# google-calendar-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  server-info.json  server.py
