[project]
name = "google-calendar-mcp"
version = "0.1.0"
description = "Modular Command Platform for Google Calendar integration."
authors = ["Sai Shashank Kudkuli <your-email@example.com>"]
requires-python = ">=3.7"

[project.dependencies]
fastmcp = "*"
google-auth = "*"
google-auth-oauthlib = "*"
google-api-python-client = "*"
